--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,23 +4,29 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:paddingBottom="8dp"
+    android:paddingLeft="8dp"
+    android:paddingRight="8dp"
+    android:paddingTop="8dp"
     tools:context="com.nanddgroup.task_digitaldistributionapplications.activities.MainActivity">
 
     <ProgressBar
-        android:visibility="gone"
         android:id="@+id/pbProgress"
-        android:layout_gravity="end"
         android:layout_width="12dp"
-        android:layout_height="12dp" />
+        android:layout_height="12dp"
+        android:layout_gravity="end"
+        android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/tvTestText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvStudents"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:cacheColorHint="@android:color/transparent"
+        android:clipToPadding="false"
+        android:divider="@null"
+        android:listSelector="@android:color/transparent"
+        android:overScrollMode="ifContentScrolls"
+        android:scrollbars="none" />
+
 </LinearLayout>
