--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,22 +12,35 @@
     android:paddingTop="8dp"
     tools:context="com.nanddgroup.task_digitaldistributionapplications.activities.MainActivity">
 
-    <ProgressBar
-        android:id="@+id/pbProgress"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        android:layout_gravity="end"
-        android:visibility="gone" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvStudents"
-        android:layout_height="match_parent"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:cacheColorHint="@android:color/transparent"
-        android:clipToPadding="false"
-        android:divider="@null"
-        android:listSelector="@android:color/transparent"
-        android:overScrollMode="ifContentScrolls"
-        android:scrollbars="none" />
+        android:layout_height="match_parent">
+
+        <ProgressBar
+            android:id="@+id/pbProgress"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvStudents"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:cacheColorHint="@android:color/transparent"
+            android:clipToPadding="false"
+            android:divider="@null"
+            android:listSelector="@android:color/transparent"
+            android:overScrollMode="ifContentScrolls"
+            android:scrollbars="none" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabFilter"
+            android:background="@drawable/ic_filter_list_black_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"/>
+    </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
