--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,8 @@
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabFilter"
-            android:background="@drawable/ic_filter_list_black_24dp"
+            android:src="@android:drawable/ic_menu_sort_by_size"
+            app:backgroundTint="#E65100"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"/>
