--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabFilter"
             android:src="@android:drawable/ic_menu_sort_by_size"
-            app:backgroundTint="#E65100"
+            app:backgroundTint="#ed3077c4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|bottom"/>
