--- a/app/src/main/res/layout/course_list_item.xml
+++ b/app/src/main/res/layout/course_list_item.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:elevation="2dp"
+    android:elevation="@dimen/cv_elevation"
     android:layout_marginTop="3dp"
     android:layout_marginBottom="3dp"
-    card_view:cardCornerRadius="2dp">
+    card_view:cardCornerRadius="@dimen/cv_cornerRadius">
 
     <RelativeLayout
         android:layout_width="match_parent"
