--- a/app/src/main/res/layout/studetns_list_item.xml
+++ b/app/src/main/res/layout/studetns_list_item.xml
@@ -5,10 +5,10 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="2dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    card_view:cardCornerRadius="2dp">
+    android:layout_marginBottom="@dimen/cv_Student_margin"
+    android:layout_marginTop="@dimen/cv_Student_margin"
+    android:elevation="@dimen/cv_Student_elevation"
+    card_view:cardCornerRadius="@dimen/cv_Student_cornerRadius">
 
 
     <LinearLayout
@@ -19,11 +19,11 @@
 
         <ImageView
             android:id="@+id/ivStudentIcon"
-            android:layout_width="64dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:layout_height="64dp"
+            android:layout_width="@dimen/iv_StudentIcon_size"
+            android:layout_height="@dimen/iv_StudentIcon_size"
             android:layout_marginLeft="16dp"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp"
             tools:background="@android:drawable/sym_def_app_icon" />
 
         <LinearLayout
