--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,19 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="rv_margin_left">8dp</dimen>
+    <dimen name="rv_margin_right">8dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="pb_size">36dp</dimen>
+    <dimen name="cv_elevation">2dp</dimen>
+    <dimen name="cv_cornerRadius">2dp</dimen>
+    <dimen name="lv_courses_width">256dp</dimen>
+    <dimen name="lv_courses_dividerHeight">2dp</dimen>
+    <dimen name="b_ok_margin">16dp</dimen>
+    <dimen name="tv_averageMark_margin">16dp</dimen>
+    <dimen name="lv_Courses_margin">16dp</dimen>
+    <dimen name="cv_Student_margin">5dp</dimen>
+    <dimen name="cv_Student_cornerRadius">2dp</dimen>
+    <dimen name="cv_Student_elevation">2dp</dimen>
+    <dimen name="iv_StudentIcon_size">64dp</dimen>
 </resources>
