--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,23 +24,23 @@
             android:id="@+id/rvStudents"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/rv_margin_left"
+            android:layout_marginRight="@dimen/rv_margin_right"
             android:cacheColorHint="@android:color/transparent"
             android:clipToPadding="false"
             android:divider="@null"
-            android:layout_marginLeft="@dimen/rv_margin_left"
-            android:layout_marginRight="@dimen/rv_margin_right"
             android:listSelector="@android:color/transparent"
             android:overScrollMode="ifContentScrolls"
             android:scrollbars="none" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fabFilter"
-            android:src="@android:drawable/ic_menu_sort_by_size"
-            app:backgroundTint="#ed3077c4"
-            android:layout_margin="@dimen/fab_margin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"/>
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/fab_margin"
+            android:src="@android:drawable/ic_menu_sort_by_size"
+            app:backgroundTint="#ed3077c4" />
     </android.support.design.widget.CoordinatorLayout>
 
 </LinearLayout>
